--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Professional Portfolio</title>
+    <title>Testing Professional Portfolio</title>
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter for a clean, modern look -->
@@ -63,7 +63,7 @@
                 </div>
                 <div class="md:w-2/3 text-left">
                     <p class="text-lg text-gray-700 leading-relaxed mb-4">
-                        Hello! I'm [Your Name], a [Your Profession] with [Number] years of experience in [Your Field/Industry]. My journey in [Your Field] began with a fascination for [mention something specific that sparked your interest, e.g., how websites are built, the power of visual communication, solving complex problems with data].
+                        Hello! I'm Justin and this is my initial test of writing my own code for professional portfolio. In the spirit of Agile, I am publishing this site in a minimum viable product state. All content should be considered "placeholder" for now.
                     </p>
                     <p class="text-lg text-gray-700 leading-relaxed mb-4">
                         I specialize in [mention 2-3 key skills or areas of expertise, e.g., frontend development with React, UI/UX design, Python for data analysis, digital marketing strategies]. I thrive on turning ideas into tangible, user-friendly products and experiences.
