--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header class="bg-white shadow-md py-4 px-6 fixed w-full z-10 top-0 rounded-b-lg">
         <nav class="container mx-auto flex justify-between items-center">
             <!-- Logo/Name -->
-            <a href="#home" class="text-2xl font-bold text-indigo-600 rounded-md p-2 hover:bg-indigo-50 transition-colors duration-300">Your Name</a>
+            <a href="#home" class="text-2xl font-bold text-indigo-600 rounded-md p-2 hover:bg-indigo-50 transition-colors duration-300">Justin Cavanaugh</a>
             <!-- Navigation Links -->
             <ul class="flex space-x-6">
                 <li><a href="#about" class="text-gray-700 hover:text-indigo-600 font-medium transition-colors duration-300 rounded-md p-2 hover:bg-indigo-50">About</a></li>
@@ -48,7 +48,7 @@
         <div class="container mx-auto text-center px-4">
             <img src="https://placehold.co/150x150/6366F1/FFFFFF?text=YO" alt="Your Profile Picture" class="w-36 h-36 rounded-full mx-auto mb-6 border-4 border-white shadow-lg object-cover">
             <h1 class="text-4xl md:text-6xl font-extrabold mb-4 leading-tight">Hi, I'm <span class="text-yellow-300">Your Name</span></h1>
-            <p class="text-xl md:text-2xl mb-8 max-w-2xl mx-auto opacity-90">A passionate [Your Profession, e.g., Web Developer, Graphic Designer, Data Scientist] dedicated to creating impactful and innovative solutions.</p>
+            <p class="text-xl md:text-2xl mb-8 max-w-2xl mx-auto opacity-90">A versatile professional with experience & credentials in instructional/curriculum design, learning management systems, AI, Agile methodology, teaching and cybersecurity.</p>
             <a href="#projects" class="bg-white text-indigo-600 px-8 py-3 rounded-full text-lg font-semibold hover:bg-gray-100 transition-all duration-300 transform hover:scale-105 shadow-lg">View My Work</a>
         </div>
     </section>
@@ -63,13 +63,13 @@
                 </div>
                 <div class="md:w-2/3 text-left">
                     <p class="text-lg text-gray-700 leading-relaxed mb-4">
-                        Hello! I'm Justin and this is my initial test of writing my own code for professional portfolio. In the spirit of Agile, I am publishing this site in a minimum viable product state. All content should be considered "placeholder" for now.
+                        Hello! I'm Justin and this will eventually serve as my professional portfolio. If you are reading this, please note that this is also my initial test of writing my own code and publishing a website from scratch. In the spirit of Agile (and since I am a "Z to A" learner, I am publishing this site in a "minimum viable product" state, including some temporary placeholder elements.
                     </p>
                     <p class="text-lg text-gray-700 leading-relaxed mb-4">
-                        I specialize in [mention 2-3 key skills or areas of expertise, e.g., frontend development with React, UI/UX design, Python for data analysis, digital marketing strategies]. I thrive on turning ideas into tangible, user-friendly products and experiences.
+                        I recently completed Google's Cybersecurity Professional Certificate program. This experience helped inspire me to continue to explore several technology-related interests, including converting a personal laptop into a Linux OS...and creating this website!
                     </p>
                     <p class="text-lg text-gray-700 leading-relaxed">
-                        Outside of work, I enjoy [mention a hobby or two, e.g., hiking, reading sci-fi, playing guitar, cooking]. I'm always eager to learn new technologies and collaborate on exciting projects. Feel free to connect with me!
+                        I have spent most of my career in Learning & Development and IT. I have a master's degree in Curriculum Design & Instruction, experience as a scrum master, LMS Adminstrator, SharePoint administrator and I'm passionate about producing multimedia content, especially if it involves video editing.
                     </p>
                 </div>
             </div>
@@ -145,7 +145,7 @@
         <div class="container mx-auto text-center">
             <h2 class="text-4xl font-bold text-gray-900 mb-8">Get In Touch</h2>
             <p class="text-lg text-gray-700 mb-8 max-w-2xl mx-auto">
-                Have a project in mind or just want to say hello? Feel free to reach out!
+                If you are reading this, please note that this page remains in a testing state. If you want to contact, for now the best way is to find me on LinkedIn (https://www.linkedin.com/in/justin-cavanaugh-132932120/).
             </p>
             <form action="#" method="POST" class="max-w-md mx-auto space-y-6">
                 <div>
@@ -168,7 +168,7 @@
     <!-- Footer Section -->
     <footer class="bg-gray-800 text-white py-8 px-6 text-center rounded-t-lg">
         <div class="container mx-auto">
-            <p class="text-sm">&copy; 2025 Your Name. All rights reserved.</p>
+            <p class="text-sm">&copy; 2025 Justin Cavanaugh. All rights reserved.</p>
             <div class="flex justify-center space-x-6 mt-4">
                 <!-- Social Media Links (replace # with actual links) -->
                 <a href="#" class="text-gray-400 hover:text-white transition-colors duration-300" aria-label="LinkedIn">
