--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section id="home" class="relative bg-gradient-to-r from-indigo-500 to-purple-600 text-white py-24 md:py-32 flex items-center justify-center min-h-screen-75 rounded-b-3xl shadow-xl mt-16">
         <div class="container mx-auto text-center px-4">
             <img src="https://placehold.co/150x150/6366F1/FFFFFF?text=YO" alt="Your Profile Picture" class="w-36 h-36 rounded-full mx-auto mb-6 border-4 border-white shadow-lg object-cover">
-            <h1 class="text-4xl md:text-6xl font-extrabold mb-4 leading-tight">Hi, I'm <span class="text-yellow-300">Your Name</span></h1>
+            <h1 class="text-4xl md:text-6xl font-extrabold mb-4 leading-tight">Hi, I'm <span class="text-yellow-300">Justin Cavanaugh</span></h1>
             <p class="text-xl md:text-2xl mb-8 max-w-2xl mx-auto opacity-90">A versatile professional with experience & credentials in instructional/curriculum design, learning management systems, AI, Agile methodology, teaching and cybersecurity.</p>
             <a href="#projects" class="bg-white text-indigo-600 px-8 py-3 rounded-full text-lg font-semibold hover:bg-gray-100 transition-all duration-300 transform hover:scale-105 shadow-lg">View My Work</a>
         </div>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="md:w-2/3 text-left">
                     <p class="text-lg text-gray-700 leading-relaxed mb-4">
-                        Hello! I'm Justin and this will eventually serve as my professional portfolio. If you are reading this, please note that this is also my initial test of writing my own code and publishing a website from scratch. In the spirit of Agile (and since I am a "Z to A" learner, I am publishing this site in a "minimum viable product" state, including some temporary placeholder elements.
+                        Hello! I'm Justin and this will eventually serve as my professional portfolio. If you are reading this, please note that this is also my initial test of writing my own code and publishing a website from scratch. In the spirit of Agile (and since I am a "Z to A" learner), I am publishing this site in a "minimum viable product" state, including some temporary placeholders.
                     </p>
                     <p class="text-lg text-gray-700 leading-relaxed mb-4">
                         I recently completed Google's Cybersecurity Professional Certificate program. This experience helped inspire me to continue to explore several technology-related interests, including converting a personal laptop into a Linux OS...and creating this website!
@@ -145,7 +145,7 @@
         <div class="container mx-auto text-center">
             <h2 class="text-4xl font-bold text-gray-900 mb-8">Get In Touch</h2>
             <p class="text-lg text-gray-700 mb-8 max-w-2xl mx-auto">
-                If you are reading this, please note that this page remains in a testing state. If you want to contact, for now the best way is to find me on LinkedIn (https://www.linkedin.com/in/justin-cavanaugh-132932120/).
+                If you are reading this, please note that this page remains in a testing state. If you want to contact me, for now the best way is to find me on LinkedIn. (https://www.linkedin.com/in/justin-cavanaugh-132932120/)
             </p>
             <form action="#" method="POST" class="max-w-md mx-auto space-y-6">
                 <div>
