--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h2 class="text-4xl font-bold text-gray-900 mb-8">About Me</h2>
             <div class="flex flex-col md:flex-row items-center md:space-x-8">
                 <div class="md:w-1/3 mb-8 md:mb-0">
-                    <img src="https://placehold.co/300x300/E0E7FF/4F46E5?text=About+Me" alt="About Me Image" class="w-full h-auto rounded-xl shadow-md object-cover">
+                    <img src="MeAtBC.jpeg" alt="Your Profile Picture" class="w-36 h-36 rounded-full mx-auto mb-6 border-4 border-white shadow-lg object-cover">
                 </div>
                 <div class="md:w-2/3 text-left">
                     <p class="text-lg text-gray-700 leading-relaxed mb-4">
