--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="md:w-2/3 text-left">
                     <p class="text-lg text-gray-700 leading-relaxed mb-4">
-                        Hello! I'm Justin and this will eventually serve as my professional portfolio. If you are reading this, please note that this is also my initial test of writing my own code and publishing a website from scratch. In the spirit of Agile (and since I am a "Z to A" learner), I am publishing this site in a "minimum viable product" state, including some temporary placeholders.
+                        Hello! I'm Justin and this will eventually serve as my professional portfolio. If you are reading this, please note this is also my initial test of writing my own code and publishing a website from scratch. In the spirit of Agile (and since I am a "Z to A" learner), I am publishing this site in a "minimum viable product" state, including some temporary placeholders.
                     </p>
                     <p class="text-lg text-gray-700 leading-relaxed mb-4">
                         I recently completed Google's Cybersecurity Professional Certificate program. This experience helped inspire me to continue to explore several technology-related interests, including converting a personal laptop into a Linux OS...and creating this website!
@@ -82,54 +82,54 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
                 <!-- Project Card 1 -->
-                <div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
-                    <img src="https://placehold.co/400x250/A78BFA/FFFFFF?text=Project+1" alt="Project 1 Image" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <h3 class="text-2xl font-semibold text-gray-900 mb-3">Project Title One</h3>
-                        <p class="text-gray-700 mb-4">A brief description of Project One, highlighting its purpose and your role. Mention key technologies used.</p>
-                        <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="bg-indigo-100 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full">HTML</span>
-                            <span class="bg-indigo-100 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full">CSS</span>
-                            <span class="bg-indigo-100 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full">JavaScript</span>
-                        </div>
-                        <a href="#" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
-                            View Project
-                            <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
-                        </a>
-                    </div>
-                </div>
+<div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
+    <img src="https://placehold.co/400x250/A78BFA/FFFFFF?text=Project+1" alt="Project 1 Image" class="w-full h-48 object-cover">
+    <div class="p-6">
+        <h3 class="text-2xl font-semibold text-gray-900 mb-3">Software Simulations</h3>
+        <p class="text-gray-700 mb-4">This project consisted of a series software simulations I created using Storyline 360. My voiceover describes the context, including how we customized Storyline's innate "sim" functionality for this project.</p>
+        <div class="flex flex-wrap gap-2 mb-4">
+            <span class="bg-indigo-100 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full">Articulate/Storyline 360</span>
+            <span class="bg-indigo-100 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full">Camtasia</span>
+            <span class="bg-indigo-100 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full">LMS</span>
+        </div>
+        <a href="https://youtu.be/SwjcHbD4XWs" target="_blank" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
+            View Project
+            <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
+        </a>
+    </div>
+</div>
 
                 <!-- Project Card 2 -->
-                <div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
-                    <img src="https://placehold.co/400x250/818CF8/FFFFFF?text=Project+2" alt="Project 2 Image" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <h3 class="text-2xl font-semibold text-gray-900 mb-3">Project Title Two</h3>
-                        <p class="text-gray-700 mb-4">A brief description of Project Two, highlighting its purpose and your role. Mention key technologies used.</p>
-                        <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">React</span>
-                            <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Node.js</span>
-                            <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">MongoDB</span>
-                        </div>
-                        <a href="#" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
-                            View Project
-                            <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
-                        </a>
-                    </div>
-                </div>
+<div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
+    <img src="https://placehold.co/400x250/818CF8/FFFFFF?text=Project+2" alt="Project 2 Image" class="w-full h-48 object-cover">
+    <div class="p-6">
+        <h3 class="text-2xl font-semibold text-gray-900 mb-3">eLearning/LMS Content</h3>
+        <p class="text-gray-700 mb-4">An overview of several eLearning/LMS projects I published for a former employer, with an emphasis on multimedia creation.</p>
+        <div class="flex flex-wrap gap-2 mb-4">
+            <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">React</span>
+            <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Node.js</span>
+            <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">MongoDB</span>
+        </div>
+        <a href="https://youtu.be/0KvbcqvpBXc" target="_blank" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
+            View Project
+            <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
+        </a>
+    </div>
+</div>
 
                 <!-- Project Card 3 -->
                 <div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
                     <img src="https://placehold.co/400x250/C4B5FD/FFFFFF?text=Project+3" alt="Project 3 Image" class="w-full h-48 object-cover">
                     <div class="p-6">
-                        <h3 class="text-2xl font-semibold text-gray-900 mb-3">Project Title Three</h3>
-                        <p class="text-gray-700 mb-4">A brief description of Project Three, highlighting its purpose and your role. Mention key technologies used.</p>
+                        <h3 class="text-2xl font-semibold text-gray-900 mb-3">Cybersecurity Certification</h3>
+                        <p class="text-gray-700 mb-4">A summary of my work while completing Google's cybersecurity certificate program. It also references projects inspired by the program since completing it.</p>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Python</span>
                             <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Data Analysis</span>
                             <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Jupyter</span>
                         </div>
                         <a href="#" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
-                            View Project
+                            View Project (placeholder; will be added)
                             <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
                         </a>
                     </div>
