--- a/index.html
+++ b/index.html
@@ -140,29 +140,14 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="py-16 md:py-24 bg-white rounded-xl shadow-lg mx-auto my-12 max-w-4xl px-6">
-        <div class="container mx-auto text-center">
-            <h2 class="text-4xl font-bold text-gray-900 mb-8">Get In Touch</h2>
-            <p class="text-lg text-gray-700 mb-8 max-w-2xl mx-auto">
-                If you are reading this, please note that this page remains in a testing state. If you want to contact me, for now the best way is to find me on LinkedIn. (https://www.linkedin.com/in/justin-cavanaugh-132932120/)
-            </p>
-            <form action="#" method="POST" class="max-w-md mx-auto space-y-6">
-                <div>
-                    <label for="name" class="block text-left text-sm font-medium text-gray-700 mb-1">Name</label>
-                    <input type="text" id="name" name="name" class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" placeholder="Your Name" required>
-                </div>
-                <div>
-                    <label for="email" class="block text-left text-sm font-medium text-gray-700 mb-1">Email</label>
-                    <input type="email" id="email" name="email" class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" placeholder="your.email@example.com" required>
-                </div>
-                <div>
-                    <label for="message" class="block text-left text-sm font-medium text-gray-700 mb-1">Message</label>
-                    <textarea id="message" name="message" rows="5" class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" placeholder="Your message..." required></textarea>
-                </div>
-                <button type="submit" class="w-full bg-indigo-600 text-white px-6 py-3 rounded-md text-lg font-semibold hover:bg-indigo-700 transition-colors duration-300 transform hover:scale-105 shadow-lg">Send Message</button>
-            </form>
+<section id="contact" class="py-16 md:py-24 bg-white rounded-xl shadow-lg mx-auto my-12 max-w-4xl px-6">
+    <div class="container mx-auto text-center">
+        <h2 class="text-4xl font-bold text-gray-900 mb-8">Get In Touch</h2>
+        <p class="text-lg text-gray-700 mb-8 max-w-2xl mx-auto">
+            To contact me or review my full list of credentials and work history, please <a href="https://www.linkedin.com/in/justin-cavanaugh-132932120/" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold underline">visit me on LinkedIn</a>.
+        </p>
         </div>
-    </section>
+</section>
 
     <!-- Footer Section -->
     <footer class="bg-gray-800 text-white py-8 px-6 text-center rounded-t-lg">
