--- a/index.html
+++ b/index.html
@@ -142,11 +142,14 @@
     <!-- Contact Section -->
 <section id="contact" class="py-16 md:py-24 bg-white rounded-xl shadow-lg mx-auto my-12 max-w-4xl px-6">
     <div class="container mx-auto text-center">
-        <h2 class="text-4xl font-bold text-gray-900 mb-8">Get In Touch</h2>
-        <p class="text-lg text-gray-700 mb-8 max-w-2xl mx-auto">
-            To contact me or review my full list of credentials and work history, please <a href="https://www.linkedin.com/in/justin-cavanaugh-132932120/" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold underline">visit me on LinkedIn</a>.
+        <h2 class="text-4xl font-bold text-gray-900 mb-8">Get In Touch!</h2>
+        <p class="text-lg text-gray-700 mb-4 max-w-2xl mx-auto">
+            I'm always open to new opportunities to learn and collaborate. Feel free to reach out!
         </p>
-        </div>
+        <p class="text-lg text-gray-700 mb-8 max-w-2xl mx-auto">
+            You can email me directly at <a href="mailto:jandjcavanaugh.com" class="text-indigo-600 hover:text-indigo-800 font-semibold underline">your.email@example.com</a> or learn more about me <a href="https://www.linkedin.com/in/justin-cavanaugh-132932120/" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold underline">on LinkedIn!</a>.
+        </p>
+    </div>
 </section>
 
     <!-- Footer Section -->
