--- a/index.html
+++ b/index.html
@@ -144,10 +144,13 @@
     <div class="container mx-auto text-center">
         <h2 class="text-4xl font-bold text-gray-900 mb-8">Get In Touch!</h2>
         <p class="text-lg text-gray-700 mb-4 max-w-2xl mx-auto">
-            I'm always open to new opportunities to learn and collaborate. Feel free to reach out!
+            I'm always open to new opportunities to learn and collaborate.
+        </p>
+        <p class="text-lg text-gray-700 mb-4 max-w-2xl mx-auto">
+            Feel free to reach out!
         </p>
         <p class="text-lg text-gray-700 mb-8 max-w-2xl mx-auto">
-            You can email me directly at <a href="mailto:jandjcavanaugh.com" class="text-indigo-600 hover:text-indigo-800 font-semibold underline">your.email@example.com</a> or learn more about me <a href="https://www.linkedin.com/in/justin-cavanaugh-132932120/" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold underline">on LinkedIn!</a>.
+            You can email me directly at <a href="mailto:jandjcavanaugh@gmail.com" class="text-indigo-600 hover:text-indigo-800 font-semibold underline">jandjcavanaugh@gmail.com</a> or learn more about me <a href="https://www.linkedin.com/in/justin-cavanaugh-132932120/" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold underline">on LinkedIn!</a>.
         </p>
     </div>
 </section>
