--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             I'm always open to new opportunities to learn and collaborate. Feel free to reach out!
         </p>
         <p class="text-lg text-gray-700 mb-8 max-w-2xl mx-auto">
-            You can email me directly at <a href="mailto:jandjcavanaugh@gmail.com" class="text-indigo-600 hover:text-indigo-800 font-semibold underline">jandjcavanaugh@gmail.com</a> or learn more about me <a href="https://www.linkedin.com/in/justin-cavanaugh-132932120/" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold underline">on LinkedIn</a>!
+            You can <a href="mailto:jandjcavanaugh@gmail.com" class="text-indigo-600 hover:text-indigo-800 font-semibold underline">email me directly</a> or learn more about me <a href="https://www.linkedin.com/in/justin-cavanaugh-132932120/" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold underline">on LinkedIn</a>!
         </p>
     </div>
 </section>
