--- a/index.html
+++ b/index.html
@@ -121,12 +121,14 @@
                 <div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
                     <img src="https://placehold.co/400x250/C4B5FD/FFFFFF?text=Project+3" alt="Project 3 Image" class="w-full h-48 object-cover">
                     <div class="p-6">
-                        <h3 class="text-2xl font-semibold text-gray-900 mb-3">Cybersecurity Certification</h3>
-                        <p class="text-gray-700 mb-4">A summary of my work while completing Google's cybersecurity certificate program. It also references projects inspired by the program since completing it.</p>
+                        <h3 class="text-2xl font-semibold text-gray-900 mb-3">AI and Cybersecurity-inspired projects</h3>
+                        <p class="text-gray-700 mb-4">A summary of several projects inspired by completing Google's AI and Cybersecurity Certification program.</p>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Python</span>
                             <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Linux</span>
                             <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">SQL</span>
+                            <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">HTML</span>
+                            <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">AI</span>
                         </div>
                         <a href="#" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
                             View Project (Coming Soon)
