--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testing Professional Portfolio</title>
+    <title>Professional Portfolio</title>
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter for a clean, modern look -->
@@ -83,13 +83,34 @@
 
                 <!-- Project Card 1 -->
 <div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
+    <img src="https://placehold.co/400x250/C4B5FD/FFFFFF?text=Project+3" alt="Project 3 Image" class="w-full h-48 object-cover">
+            <div class="p-6">
+                <h3 class="text-2xl font-semibold text-gray-900 mb-3">AI and Cybersecurity-inspired projects</h3>
+                <p class="text-gray-700 mb-4">A summary of several projects inspired by completing Google's AI and Cybersecurity Certification programs.</p>
+                <div class="flex flex-wrap gap-2 mb-4">
+                        <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Python</span>
+                        <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Linux</span>
+                        <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">SQL</span>
+                        <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">HTML</span>
+                        <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">AI</span>
+                        <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Cybersecurity</span>
+                    </div>
+                    <a href="portfoliotest1/Portfolio_techslides(1).pdf" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
+                        View Project
+                    <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Project Card 2 -->
+<div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
     <img src="https://placehold.co/400x250/A78BFA/FFFFFF?text=Project+1" alt="Project 1 Image" class="w-full h-48 object-cover">
     <div class="p-6">
         <h3 class="text-2xl font-semibold text-gray-900 mb-3">Software Simulations</h3>
         <p class="text-gray-700 mb-4">This project consisted of a series software simulations I created using Storyline 360. My voiceover describes the context, including how we customized Storyline's innate "sim" functionality for this project.</p>
         <div class="flex flex-wrap gap-2 mb-4">
             <span class="bg-indigo-100 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full">Storyline 360</span>
-            <span class="bg-indigo-100 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full">Camtasia</span>
+            <span class="bg-indigo-100 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full">Articulate 360</span>
             <span class="bg-indigo-100 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full">LMS</span>
         </div>
         <a href="https://youtu.be/SwjcHbD4XWs" target="_blank" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
@@ -99,16 +120,16 @@
     </div>
 </div>
 
-                <!-- Project Card 2 -->
+                <!-- Project Card 3 -->
 <div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
     <img src="https://placehold.co/400x250/818CF8/FFFFFF?text=Project+2" alt="Project 2 Image" class="w-full h-48 object-cover">
     <div class="p-6">
         <h3 class="text-2xl font-semibold text-gray-900 mb-3">eLearning/LMS Content</h3>
         <p class="text-gray-700 mb-4">An overview of several eLearning/LMS projects I published for a former employer, with an emphasis on multimedia creation. Content includes: training for Agile methodology, Office 365 and several technical/applicaton-specific courses. </p>
         <div class="flex flex-wrap gap-2 mb-4">
-            <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Learning Management Systems</span>
+            <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">LMS</span>
             <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Video Editing</span>
-            <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">SharePoint</span>
+            <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">eLearning</span>
         </div>
         <a href="https://youtu.be/0KvbcqvpBXc" target="_blank" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
             View Project
@@ -116,30 +137,6 @@
         </a>
     </div>
 </div>
-
-                <!-- Project Card 3 -->
-                <div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
-                    <img src="https://placehold.co/400x250/C4B5FD/FFFFFF?text=Project+3" alt="Project 3 Image" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <h3 class="text-2xl font-semibold text-gray-900 mb-3">AI and Cybersecurity-inspired projects</h3>
-                        <p class="text-gray-700 mb-4">A summary of several projects inspired by completing Google's AI and Cybersecurity Certification programs.</p>
-                        <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Python</span>
-                            <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Linux</span>
-                            <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">SQL</span>
-                            <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">HTML</span>
-                            <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">AI</span>
-                            <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Cybersecurity</span>
-                        </div>
-                        <a href="#" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
-                            View Project (Coming Soon)
-                            <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
-                        </a>
-                    </div>
-                </div>
-
-            </div>
-        </div>
     </section>
 
     <!-- Contact Section -->
