--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">AI</span>
                         <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Cybersecurity</span>
                     </div>
-                    <a href="https://raw.githubusercontent.com/justincavanaugh-code/portfoliotest1/main/Portfolio_tech%20slides%20(2).pdf" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
+                    <a href="https://github.com/justincavanaugh-code/portfoliotest1/Portfolio_tech slides (2).pdf" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
                         View Project
                     <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
                         </a>
