--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">AI</span>
                         <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Cybersecurity</span>
                     </div>
-                    <a href="https://github.com/justincavanaugh-code/portfoliotest1/Portfolio_tech slides (2).pdf" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
+                    <a href="https://raw.githubusercontent.com/justincavanaugh-code/portfoliotest1/main/Portfolio-tech-slides-2.pdf" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
                         View Project
                     <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
                         </a>
@@ -111,6 +111,7 @@
         <div class="flex flex-wrap gap-2 mb-4">
             <span class="bg-indigo-100 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full">Storyline 360</span>
             <span class="bg-indigo-100 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full">Articulate 360</span>
+            <span class="bg-indigo-100 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full">eLearning</span>
             <span class="bg-indigo-100 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full">LMS</span>
         </div>
         <a href="https://youtu.be/SwjcHbD4XWs" target="_blank" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
