--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                 </div>
                 <div class="md:w-2/3 text-left">
                     <p class="text-lg text-gray-700 leading-relaxed mb-4">
-                        Hello! I'm Justin and this is my professional portfolio. This is also my initial attempts at writing my own HTML code and publishing a website from scratch. In the spirit of Agile (and since I am a "Z to A" learner), I am publishing this site with the intention to update and interate as needed.
+                        Hello! I'm Justin and this is my professional portfolio. This is also my initial attempt at writing my own HTML code and publishing a website from scratch. In the spirit of Agile (and since I am a "Z to A" learner), I am publishing this site with the intention to update and iterate as needed.
                     </p>
                     <p class="text-lg text-gray-700 leading-relaxed mb-4">
-                        I recently completed Google's Cybersecurity Professional Certificate program. This experience helped inspire me to continue to explore several technology-related interests, including completing AI certifications, converting a personal laptop into a Linux OS...and creating this website!
+                        I recently completed Google's Cybersecurity Professional Certificate program. This experience helped inspire me to continue to explore several technology-related projects, including completing AI-related certifications, converting a personal laptop into a Linux OS...and creating this website!
                     </p>
                     <p class="text-lg text-gray-700 leading-relaxed">
                         I have spent most of my career in Learning & Development and IT. I have a master's degree in Curriculum/Instructional Design, experience as a scrum master, LMS Adminstrator and SharePoint administrator. I enjoy producing and incorporating multimedia content, especially if it involves video editing.
