--- a/CyberProjects.html
+++ b/CyberProjects.html
@@ -27,12 +27,11 @@
 Google's 8-course program was fascinating and challenging! It covered security and networking fundamentals and introduced me to a wide variety of concepts, such as the NIST and the OWASP Top Ten. Through Google's in-course labs, I gained hands-on experience with several technologies including Linux, SQL and Python, as well as a crash-course on using the command line interface.
                 </p>
             </div>
-            <div class="flex-1">
-                <div class="bg-slate-200 border-2 border-dashed border-slate-400 rounded-xl h-64 flex items-center justify-center text-slate-500">
-                    <img src="badge-image.png" alt="University of Nebraska & Google Badge" class="max-h-full">
-                    <p class="absolute italic">Insert Badge Image (Page 2)</p>
-                </div>
-            </div>
+<div class="flex-1">
+    <div class="bg-slate-200 border-2 border-slate-400 rounded-xl h-64 flex items-center justify-center text-slate-500 overflow-hidden">
+        <img src="images/CyberBadge.png" alt="University of Nebraska & Google Badge" class="max-h-full">
+        </div>
+</div>
         </section>
 
         <section class="flex flex-col md:flex-row-reverse items-center gap-12">
@@ -42,10 +41,11 @@ Google's 8-course program was fascinating and challenging! It covered security a
 </p>
 
             </div>
-            <div class="flex-1">
-                <div class="bg-slate-200 border-2 border-dashed border-slate-400 rounded-xl h-64 flex items-center justify-center text-slate-500">
-                    <img src="certificate.png" alt="Linux Desktop Environment" class="max-h-full">
-                    <p class="absolute italic">Insert Certificate Screenshot (Page 3)</p>
+<div class="flex-1">
+    <div class="bg-slate-200 border-2 border-slate-400 rounded-xl h-64 flex items-center justify-center text-slate-500 overflow-hidden relative">
+        <img src="images/LinuxDesktop.png" alt="Linux Desktop Environment" class="max-h-full">
+    </div>
+</div>
                 </div>
             </div>
         </section>
@@ -71,18 +71,19 @@ The applications I installed included Wireshark, Suricata, tcpdump, MySQL, Visua
         <section class="flex flex-col md:flex-row-reverse items-center gap-12">
             <div class="flex-1 space-y-4">
                 <h2 class="text-3xl font-bold text-blue-600">Partnering with AI</h2>
+                
                 <p>
 The Cybersecurity program inspired me to further explore a number of additional topics and resources outside the direct scope of the program. For example, I completed several AI-related certifications from Google. 
 This led me to experimenting further with how to make more effective use of AI. Initially, I was heavily reliant on AI for coding help. However, a trial-and-error approach allowed me to gain experience and, eventually, AI became more of an editor in my process. But partnering with an AI has remained a crucial tool in helping me learn unfamiliar concepts. 
 
                 </p>
 
-            </div>
-            <div class="flex-1">
-                <div class="bg-slate-200 border-2 border-dashed border-slate-400 rounded-xl h-64 flex items-center justify-center text-slate-500">
-                    <img src="certificate.png" alt="Portfolio image" class="max-h-full">
-                    <p class="absolute italic">Insert Certificate Screenshot (Page 3)</p>
-                </div>
+</div>
+    <div class="flex-1">
+        <div class="bg-slate-200 border-2 border-slate-400 rounded-xl h-64 flex items-center justify-center text-slate-500 overflow-hidden">
+            <img src="images/AIsnip.png" alt="Partial screenshot of collaboration with AI" class="max-h-full">
+        </div>
+    </div>
             </div>
         </section>
 
@@ -97,14 +98,13 @@ Next I wanted to code my portfolio website without relying on a resource like Wi
 My initial website was a proof of concept. At first, I was publishing my code to GitHub far too often. These experiences eventually led me to buying and converting a modern laptop to a more advanced Linux distribution, which I used to write and test code much more effectively. But the iterative process - and learning from my mistakes - was an incredibly valuable experience. 
     </p>  
 
+</div>
+        <div class="flex-1">
+            <div class="bg-slate-200 border-2 border-slate-400 rounded-xl h-64 flex items-center justify-center text-slate-500 overflow-hidden">
+                <img src="images/PortfolioImage.png" alt="Early Portfolio Website Mockup" class="max-h-full">
             </div>
-            <div class="flex-1">
-                <div class="bg-slate-200 border-2 border-dashed border-slate-400 rounded-xl h-64 flex items-center justify-center text-slate-500">
-                    <img src="website-mockup.png" alt="Portfolio Website" class="max-h-full">
-                    <p class="absolute italic text-center">Insert Website Mockup (Page 10)</p>
-                </div>
-            </div>
-        </section>
+        </div>
+    </section>
 
     </main>
 
