--- a/CyberProjects.html
+++ b/CyberProjects.html
@@ -54,7 +54,7 @@ Google's 8-course program was fascinating and challenging! It covered security a
             <div class="flex-1 space-y-4">
                 <h2 class="text-3xl font-bold text-blue-600">CLI and Re-Creating Labs</h2>
                 <p>
-                   Using my newly-converted Linux machine, I begin re-creating as many of the lab environments as possible that I'd experienced within Google's Cybersecurity courses. 
+Using my newly-converted Linux machine, I begin re-creating as many of the lab environments as possible that I'd experienced within Google's Cybersecurity courses. 
 
 The applications I installed included Wireshark, Suricata, tcpdump, MySQL, Visual Studio and Jupyter notebook. But probably the most important developmment was my increasing comfort with working from the command line interface, which set the stage for a later project involving virtualization, application developmment and server management. What began purely as a professional development project led to an interesting discovery: I very much enjoyed writing my own code!
 
@@ -62,7 +62,7 @@ The applications I installed included Wireshark, Suricata, tcpdump, MySQL, Visua
             </div>
             <div class="flex-1">
                 <div class="bg-slate-200 border-2 border-dashed border-slate-400 rounded-xl h-64 flex items-center justify-center text-slate-500">
-                    <img src="linux-desktop.png" alt="Linux command line interface" class="max-h-full shadow-lg">
+                    <img src="LinuxCLI.png" alt="Linux command line interface" class="max-h-full shadow-lg">
                 </div>
             </div>
         </section>
