--- a/CyberProjects.html
+++ b/CyberProjects.html
@@ -60,11 +60,11 @@ The applications I installed included Wireshark, Suricata, tcpdump, MySQL, Visua
 
                 </p>
             </div>
-            <div class="flex-1">
-                <div class="bg-slate-200 border-2 border-dashed border-slate-400 rounded-xl h-64 flex items-center justify-center text-slate-500">
-                    <img src="LinuxCLI.png" alt="Linux command line interface" class="max-h-full shadow-lg">
-                </div>
-            </div>
+<div class="flex-1">
+    <div class="bg-slate-200 border-2 border-dashed border-slate-400 rounded-xl h-64 flex items-center justify-center text-slate-500">
+        <img src="images/LinuxCLI.png" alt="Linux command line interface" class="max-h-full shadow-lg">
+    </div>
+</div>
         </section>
 
         <section class="flex flex-col md:flex-row-reverse items-center gap-12">
