--- a/CyberProjects.html
+++ b/CyberProjects.html
@@ -100,7 +100,7 @@ My initial website was a proof of concept. At first, I was publishing my code to
 </div>
         <div class="flex-1">
             <div class="bg-slate-200 border-2 border-slate-400 rounded-xl h-64 flex items-center justify-center text-slate-500 overflow-hidden">
-                <img src="images/PortfolioImage.png" alt="Early Portfolio Website Mockup" class="max-h-full">
+                <img src="images/Portfolio.png" alt="Early Portfolio Website Mockup" class="max-h-full">
             </div>
         </div>
     </section>
