--- a/Reclaim.html
+++ b/Reclaim.html
@@ -104,13 +104,13 @@
 
         <section id="objectives">
             <h2 class="section-title">Objectives & Context</h2>
-            <p>This project began as a mission to repurpose a 15-year-old dormant Windows laptop into a high-security <strong>"clean room" environment</strong>. The goal was to create a secure, air-gapped forensic island for the inspection and analysis of legacy flash drives used in high-risk public environments.</p>
+            <p>This project began as a mission to repurpose a 15-year-old dormant Windows laptop into a high-security <strong>"clean room" environment</strong>. The goal was to create a secure, air-gapped forensic island for the inspection and analysis of legacy flash drives that had been used in high-risk public environments.</p>
             <p>This initiative allowed me to apply cybersecurity principles from professional certification programs to solve a real-world hardware problem.</p>
         </section>
 
         <section id="hardware">
             <h2 class="section-title">Hardware Reclamation</h2>
-            <p>I researched lightweight, hardened operating systems suitable for 15-year-old architecture. The choice was <strong>Linux Mint XFCE</strong>, which provided the best balance of stability and performance for terminal-heavy operations.</p>
+            <p>The first phase of this project began when I researched lightweight, hardened operating systems suitable for 15-year-old architecture. The choice was <strong>Linux Mint XFCE</strong>, which provided the best balance of stability and performance.</p>
             <div class="terminal-text">
                 [Status] System migrated to Linux Mint XFCE <br>
                 [Status] Hardware stabilized for high-performance terminal operations <br>
@@ -120,7 +120,7 @@
 
         <section id="methodology">
             <h2 class="section-title">Technical Methodology</h2>
-            <p>Using a multi-stage workflow protocol, I ensured a secure process for media analysis:</p>
+            <p>Using a multi-stage workflow protocol that I created with the help of AI (mostly Gemini), I ensured a secure process for media analysis:</p>
             
             <div class="method-box">
                 <h4>1. Hardware Isolation</h4>
@@ -140,7 +140,7 @@
         <section id="case-study">
             <h2 class="section-title">Key Case Study: Legacy Bootloader Recovery</h2>
             <div class="case-study">
-                <p>During the inspection of a "clean" formatted drive, I identified embedded ASCII strings referencing a legacy malware-removal program—remnants at least 13 years old.</p>
+                <p>During the inspection of a "clean" formatted drive, I identified embedded strings referencing a legacy malware-removal program—remnants at least 13 years old.</p>
                 <p><strong>Discovery:</strong> While the filesystem appeared empty in Windows, the <strong>Master Boot Record (MBR)</strong> and "gap" sectors still contained legacy third-party code. This highlighted the significant risk of <strong>latent data persistence</strong>.</p>
             </div>
         </section>
@@ -154,9 +154,9 @@
             </ul>
 
             <h3>Key Learnings</h3>
-            <p>I was surprised to find that a 15-year-old laptop running a lightweight Linux OS could perform deep-level forensic tasks that a modern Windows 11 machine could not easily replicate via standard GUI tools.</p>
+            <p>Even though I had previously installed Linux on two of my laptops, I was surprised to find that a 15-year-old laptop running a lightweight Linux OS could perform deep-level forensic tasks that a modern Windows 11 machine could not easily replicate via standard GUI tools.</p>
             
-            <p><strong>Outcome:</strong> A fleet of verified, forensically clean transfer media and a repeatable SOP for handling untrusted hardware.</p>
+            <p><strong>Outcome:</strong> A previously obsolete laptop was re-purposed, helping me create a fleet of verified, forensically clean transfer media. Morever, I learned a great deal while establishing a repeatable workflow for handling untrusted hardware.</p>
         </section>
     </main>
 
